flux/applications/base/prometheus-blackbox-exporter/ciliumNetworkPolicies/default-deny-inter-namespace.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-inter-namespace
  namespace: prometheus-blackbox-exporter
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
